<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/viewId"
    tools:context=".ui.main.MainActivity">

    <!-- TODO -->
    <TextView
        android:id="@+id/lblWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblWeight" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/kg"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/lblHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblHeight" />

    <EditText
        android:id="@+id/txtHeight"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/m"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reset"></Button>

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/calculate"></Button>
    </LinearLayout>
    <TextView
        android:id="@+id/lblResult"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:textSize="@dimen/TamLetra"
        android:textAlignment="center"
        android:layout_height="wrap_content">

    </TextView>

    <ImageView
        android:id="@+id/imgBmi"
        android:layout_width="348dp"
        android:layout_height="183dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="75dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bmi"></ImageView>





</LinearLayout>
